--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ your_name                                 : Matthew Kreke
 your_link                                 :                    
 your_city                                 : Watson                                
 email_address                             : PotionWare@gmail.com
-facebook_username                         :                                           
+facebook_username                         : PotionWare                                          
 instagram_username                        : 
 twitter_username                          : 
 github_username                           : 
-youtube_username                          :
+youtube_username                          : PotionWare
 
 
 
