--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ facebook_username                         : MeltValulator
 instagram_username                        : 
 twitter_username                          : 
 github_username                           : 
-youtube_username                          : @PotionWare
+youtube_username                          : PotionWare
 
 
 
