--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ enable_smart_app_banner                   : true                                
 your_name                                 : Matthew Kreke                               
 your_link                                 :                    
 your_city                                 : Watson                                
-email_address                             : PotionWare@gmail.com
+email_address                             : retropoweredgames@gmail.com
 facebook_username                         : MeltValulator                                          
 instagram_username                        : 
 twitter_username                          : 
