--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ enable_smart_app_banner                   : true                                
 your_name                                 : Matthew Kreke                               
 your_link                                 :                    
 your_city                                 : Watson                                
-email_address                             : retropoweredgames@gmail.com
+email_address                             : potionware@gmail.com
 facebook_username                         : MeltValulator                                          
 instagram_username                        : 
 twitter_username                          : 
 github_username                           : 
-youtube_username                          : PotionWare
+youtube_username                          : 
 
 
 
