--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Matthew Kreke                               
 your_link                                 :                    
-your_city                                 : Watson                                
+your_city                                 : Watson, Illinois                                
 email_address                             : potionware@gmail.com
 facebook_username                         : MeltValulator                                          
 instagram_username                        : 
