--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ features                                  :
     description                           : Using current market prices, appraise silver, gold, platinum, and palladium scrap items with just a few button presses.
     fontawesome_icon_name                 : magic
     
-  - title                                 : Compatible with Android and Ios!
+  - title                                 : Compatible with Android and iOS!
     description                           : This app is available on both Google Play and the Apple App Store.
     fontawesome_icon_name                 : mobile
 
