--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ features                                  :
     fontawesome_icon_name                 : play-circle
 
   - title                                 : Use for free or pay to unlock more
-    description                           : Appraising Silver, Gold, Platinum, and Palladium scrap is free. Switch to an 100% optional subscription service to unlock other metals.
+    description                           : Appraising silver, gold, platinum, and palladium scrap is free. Switch to an 100% optional subscription service to unlock other metals.
     fontawesome_icon_name                 : sync
 
 
