--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ your_name                                 : Matthew Kreke
 your_link                                 :                    
 your_city                                 : Watson, Illinois                                
 email_address                             : potionware@gmail.com
-facebook_username                         : MeltValulator                                          
+facebook_username                         : SilverGoldScrapCalculator                                          
 instagram_username                        : 
 twitter_username                          : 
 github_username                           : 
