--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ features                                  :
     fontawesome_icon_name                 : play-circle
 
   - title                                 : Use for free or pay to unlock more
-    description                           : Appraising silver, gold, platinum, and palladium scrap is free. Switch to an 100% optional subscription service to unlock other metals.
+    description                           : Appraising silver bullion, damaged gold coins, platinum scrap, and junk palladium is free. Switch to an 100% optional subscription service to unlock other metals.
     fontawesome_icon_name                 : sync
 
 
